--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
       </div>
     </div>
   </div>
+<script>
 
+ 
+ ga('create', 'UA-907594-9', 'auto');
+ ga('send', 'pageview');
+
+</script>
 
 
 </body>
